<resources>
    <string name="app_name">Socatra Chain Executive</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="key">AIzaSyBESyc3qsmfvBaErpDx2FSHKu4KNnVBo18</string>
    <string name="MANDATORY_TAG">MANDATORY</string>
    <string name="title">Title</string>
    <string name="start">start</string>
    <string name="secondary_number">Secondary Number</string>
    <string name="secondary_number_H">Secondary Number</string>
    <string name="secondary_number_V">Secondary Number</string>
    <string name="secondary_number_T">Secondary Number</string>
    <string name="secondary_number_M">Secondary Number</string>
    <string name="secondary_number_I">Secondary Number</string>
    <string name="refresh">Refresh</string>
    <string name="refresh_H">ताज़ा करना</string>
    <string name="refresh_V">Làm cho khỏe lại</string>
    <string name="add">Add</string>
    <string name="add_H">जोड़ना</string>
    <string name="add_V">Thêm vào</string>
    <string name="sync">Sync</string>
    <string name="sync_H">साथ-साथ करना</string>
    <string name="sync_V">đồng bộ hóa</string>
    <string name="refresh_T">รีเฟรช</string>
    <string name="add_T">เพิ่ม</string>
    <string name="sync_T">ซิงค์</string>
    <string name="refresh_M">Segarkan semula</string>
    <string name="refresh_I">Menyegarkan</string>
    <string name="add_M">Tambah</string>
    <string name="add_I">Tambahkan</string>
    <string name="sync_M">penyegerakan</string>
    <string name="sync_I">sinkronisasi</string>
    <string name="farmer_code">FarmerCode</string>
    <string name="farmer_code_H">किसानकोड</string>
    <string name="farmer_code_V">Mã nông dân</string>
    <string name="personal_details">Personal Details</string>
    <string name="personal_details_H">व्यक्तिगत विवरण</string>
    <string name="personal_details_V">Thông tin cá nhân</string>
    <string name="first_name">First Name</string>
    <string name="first_name_H">पहला नाम</string>
    <string name="first_name_V">Tên đầu tiên</string>
    <string name="last_name">Last Name</string>
    <string name="last_name_H">उपनाम</string>
    <string name="last_name_V">Họ</string>
    <string name="father_name">Father Name</string>
    <string name="father_name_H">पिता का नाम</string>
    <string name="father_name_V">tên cha</string>
    <string name="age">Age</string>
    <string name="age_H">आयु</string>
    <string name="age_V">tuổi</string>
    <string name="gender">Gender</string>
    <string name="gender_H">लिंग</string>
    <string name="gender_V">Giới tính</string>
    <string name="country">Country</string>
    <string name="country_H">देश</string>
    <string name="country_V">Quốc gia</string>
    <string name="state_province">State or Province</string>
    <string name="state_province_H">राज्य या प्रांत</string>
    <string name="state_province_V">Tiểu bang hoặc Tỉnh</string>
    <string name="district">District or Regency</string>
    <string name="district_H">जिला या रीजेंसी</string>
    <string name="district_V">Quận hoặc Regency</string>
    <string name="sub_district">Sub-District</string>
    <string name="sub_district_H">उप जिला</string>
    <string name="sub_district_V">tiểu khu</string>
    <string name="village">Village</string>
    <string name="village_H">गाँव</string>
    <string name="village_V">Làng bản</string>
    <string name="pincode">Pincode</string>
    <string name="pin_code_H">पिन कोड</string>
    <string name="pin_code_V">Mã PIN</string>
    <string name="address">Address</string>
    <string name="address_H">पता</string>
    <string name="address_V">Địa chỉ</string>
    <string name="num_plots">No of Plots</string>
    <string name="num_plots_H">भूखंडों की संख्या</string>
    <string name="num_plots_V">KHÔNG . lô đất</string>
    <string name="contact_details">Contact Details</string>
    <string name="contact_details_H">सम्पर्क करने का विवरण</string>
    <string name="contact_details_V">Chi tiết liên hệ</string>
    <string name="primary_number">Primary Number</string>
    <string name="primary_contact_H">प्राथमिक संपर्क नंबर</string>
    <string name="primary_number_V">Số chính</string>
    <string name="identity_details">Identity Details</string>
    <string name="identification_details_H">पहचान विवरण</string>
    <string name="identification_details_V">Chi tiết nhận dạng</string>
    <string name="national_identity_code">National Identity Code</string>
    <string name="national_id_code_H">नैटिनल आइडेंटिटी कोड</string>
    <string name="national_id_code_V">Mã Nhận dạng Quốc gia</string>
    <string name="national_identity_image">National Identity Image</string>
    <string name="national_id_image_H">राष्ट्रीय पहचान छवि</string>
    <string name="national_identity_image_V">Hình ảnh bản sắc dân tộc</string>
    <string name="save">Save</string>
    <string name="save_H">बचाना</string>
    <string name="save_V">Cứu</string>
    <string name="farmer_code_T">รหัสเกษตรกร</string>
    <string name="farmer_code_M">Kod petani</string>
    <string name="farmer_code_I">kodepetani</string>
    <string name="personal_details_T">Personal Details</string>
    <string name="personal_details_M">Kod Petani</string>
    <string name="personal_details_I">Kod Petani</string>
    <string name="first_name_T">ชื่อจริง</string>
    <string name="first_name_M">Nama pertama</string>
    <string name="first_name_I">Nama depan</string>
    <string name="last_name_T">นามสกุล</string>
    <string name="last_name_M">Nama terakhir</string>
    <string name="last_name_I">Nama keluarga</string>
    <string name="father_name_T">ชื่อบิดา</string>
    <string name="father_name_M">Nama bapa</string>
    <string name="father_name_I">Nama ayah</string>
    <string name="age_T">อายุ</string>
    <string name="age_M">umur</string>
    <string name="age_I">Usia</string>
    <string name="gender_T">เพศ</string>
    <string name="gender_M">Jantina</string>
    <string name="gender_I">Jenis kelamin</string>
    <string name="country_T">ประเทศ</string>
    <string name="country_M">Negara</string>
    <string name="country_I">Negara</string>
    <string name="state_or_province_T">รัฐหรือจังหวัด</string>
    <string name="state_province_M">Negeri atau Wilayah</string>
    <string name="state_province_I">Negara atau Provinsi</string>
    <string name="district_T">เขตหรืออำเภอ</string>
    <string name="district_M">Daerah atau Kabupaten</string>
    <string name="district_I">Kecamatan atau Kabupaten</string>
    <string name="subdistrict_T">ตำบล</string>
    <string name="sub_district_M">Mukim</string>
    <string name="sub_district_I">Kecamatan</string>
    <string name="village_T">หมู่บ้าน</string>
    <string name="village_M">kampung</string>
    <string name="village_I">Desa</string>
    <string name="pin_code_T">พินโค้ด</string>
    <string name="pincode_M">Kod PIN</string>
    <string name="pincode_I">Kode PIN</string>
    <string name="address_T">ที่อยู่</string>
    <string name="address_M">Alamat</string>
    <string name="address_I">Alamat</string>
    <string name="num_plots_T">เลขที่ . ของแปลง</string>
    <string name="num_plots_M">Tidak. Daripada Plot</string>
    <string name="num_plots_I">TIDAK . Plot</string>
    <string name="contact_details_T">รายละเอียดการติดต่อ</string>
    <string name="contact_details_M">Butiran kenalan</string>
    <string name="contact_details_I">Detail Kontak</string>
    <string name="main_number_T">หมายเลขหลัก</string>
    <string name="primary_number_M">Nombor Utama</string>
    <string name="primary_number_I">nomor utama</string>
    <string name="identity_details_T">รายละเอียดประจำตัว</string>
    <string name="identity_details_M">Butiran Identiti</string>
    <string name="identity_details_I">Detail Identitas</string>
    <string name="national_id_T">รหัสประจำตัวประชาชน</string>
    <string name="national_identity_code_M">Kod Identiti Asli</string>
    <string name="national_identity_code_I">Kode Identitas Kebangsaan</string>
    <string name="national_identity_image_T">รูปภาพเอกลักษณ์ประจำชาติ</string>
    <string name="national_identity_image_M">Imej Identiti Asli</string>
    <string name="national_identity_image_I">Gambar Identitas Nasional</string>
    <string name="save_T">บันทึก</string>
    <string name="save_M">Save</string>
    <string name="save_I">Simpan</string>
    <string name="familytotal">Total Family Members</string>
    <string name="occupation">Total Family Members</string>
    <string name="noofchild">No of Children</string>
    <string name="number_of_child">Number of Children</string>
    <string name="nameofchild">Name of Children</string>
    <string name="familytotal_T">จำนวนครอบครัวทั้งหมด</string>
    <string name="occupation_T">อาชีพ</string>
    <string name="noofchild_T">จำนวนเด็ก</string>
    <string name="nameofchild_T">ชื่อลูก</string>
    <string name="familytotal_H">परिवार के कुल सदस्य</string>
    <string name="occupation_H">पेशा</string>
    <string name="noofchild_H">बच्चों की संख्या</string>
    <string name="nameofchild_H">बच्चे के नाम</string>
    <string name="familytotal_V">Tổng số thành viên gia đình</string>
    <string name="occupation_V">Nghề nghiệp</string>
    <string name="noofchild_V">Số lượng trẻ em</string>
    <string name="nameofchild_V">Tên của con</string>
    <string name="familytotal_I">Jumlah anggota keluarga</string>
    <string name="occupation_I">Pekerjaan</string>
    <string name="noofchild_I">jumlah anak</string>
    <string name="nameofchild_I">nama anak</string>
    <string name="familytotal_M">Jumlah ahli keluarga</string>
    <string name="occupation_M">pekerjaan</string>
    <string name="noofchild_M">Bilangan Anak</string>
    <string name="nameofchild_M">nama anak</string>
    <string name="spousename">Spouse Name</string>
    <string name="spousename_H">जीवनसाथी का नाम</string>
    <string name="spousename_M">Nama Pasangan</string>
    <string name="spousename_I">nama pasangan</string>
    <string name="spousename_T">ชื่อคู่สมรส</string>
    <string name="spousename_V">Tên vợ/chồng</string>
    <string name="occupation1">Occupation</string>
    <string name="occupation1_H">पेशा</string>
    <string name="occupation1_V">Nghề nghiệp</string>
    <string name="occupation1_T">อาชีพ</string>
    <string name="occupation1_I">Pekerjaan</string>
    <string name="occupation1_M">pekerjaan</string>
    <string name="marital_H">बच्चों का विवरण</string>
    <string name="marital_T">รายละเอียดเด็ก</string>
    <string name="marital_M">Butiran Kanak-kanak</string>
    <string name="marital_V">chi tiết trẻ em</string>
    <string name="marital_I">Detail Anak</string>
    <string name="marital">Marital Status</string>
    <string name="childrendetails">Children Details</string>
    <string name="childrendetails_H">वैवाहिक स्थिति</string>
    <string name="childrendetails_V">Tình trạng hôn nhân</string>
    <string name="childrendetails_M">Status perkahwinan</string>
    <string name="childrendetails_I">Status pernikahan</string>
    <string name="childrendetails_T">สถานภาพการสมรส</string>
    <string name="document_details">Document Details</string>
    <string name="consent_body">I, %s, residing in %s, %s Regency, %s, confirm the accuracy of our property\'s geo-locations, map, and data. I provide consent for usage in accordance with EU Anti-Deforestation regulations, ensuring that the original ownership document remains confidential and not shared (or provided). I assume responsibility for this decision and express my appreciation for your trust and cooperation in this matter.</string>
    <string name="consent_head">CONSENT FORM</string>
    <string name="consent_sign">Signature</string>
    <string name="clear">Clear</string>
    <string name="preview_and_save">Preview and Save</string>
    <string name="name">Name</string>
    <string name="add_child_details">Add Child Details</string>
    <string name="m_back">Back</string>
    <string name="add_signature">Add Signature</string>
</resources>