<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@color/white"
    android:orientation="vertical"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_medium"
        android:gravity="center"
        android:visibility="visible"
        android:text="Preview"
        android:textColor="@color/Orange"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="vertical">
    <TextView
        android:id="@+id/addDialogPrev"
        android:layout_width="101dp"
        android:layout_height="35dp"
        android:layout_gravity="right"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/btn_bg_corner_orange"
        android:gravity="center"
        android:text="Add Sign"
        android:textColor="@color/white"
        android:textStyle="bold"
        tools:ignore="UnknownId" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/previewConsentll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/headingConsentDia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginRight="@dimen/_8sdp"
            android:fontFamily="@font/montserrat_medium"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center"
            android:text="@string/consent_head"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:id="@+id/bodyConsentDia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_marginRight="@dimen/_8sdp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/consent_body"
            android:textSize="@dimen/_9sdp" />

        <TextView
            android:id="@+id/signConsentDia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_marginRight="@dimen/_8sdp"
            android:fontFamily="@font/montserrat_medium"
            android:gravity="right"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/_14sdp"
            android:textStyle="bold"
            android:text="@string/consent_sign"
            android:textSize="@dimen/_10sdp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_marginRight="@dimen/_8sdp"
            android:gravity="end"
            android:orientation="vertical">

        <ImageView
            android:id="@+id/imageViewPreviewDia"
            android:layout_width="90dp"
            android:layout_height="65dp"
            android:layout_marginTop="@dimen/_2sdp"
            android:layout_marginBottom="250dp"
            tools:srcCompat="@tools:sample/avatars" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/savePreviewDia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@drawable/btn_bg_corner_orange"
        android:gravity="center"
        android:text="@string/save" />



</LinearLayout>