<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@null"
    android:orientation="vertical"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp">

    <TextView
        android:id="@+id/childAddDialHd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_medium"
        android:gravity="center"
        android:text="@string/add_child_details"
        android:textColor="@color/Orange"
        android:textSize="25sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_medium"
        android:gravity="center"
        android:text="Farmer Code :"
        android:textColor="@color/Orange"
        android:textSize="16sp"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_8sdp"
                android:padding="3dp"
                app:cardCornerRadius="@dimen/_6sdp"
                app:cardElevation="@dimen/_6ssp"
                app:cardUseCompatPadding="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/nameHd"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/montserrat_medium"
                        android:padding="2dp"
                        android:text="@string/name"
                        android:textSize="@dimen/_10ssp" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etChildNameCdial"
                        style="@style/CustomEditTextPadding5dp"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_22ssp"
                        android:background="@drawable/rectangular_curved_box"
                        android:fontFamily="@font/montserrat_regular"
                        android:inputType="text"
                        android:paddingStart="@dimen/_6ssp"
                        android:tag="@string/MANDATORY_TAG"
                        android:textColor="@color/enabled_color"
                        android:textCursorDrawable="@null"
                        android:textSize="@dimen/_12ssp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_8sdp"
                android:padding="3dp"
                app:cardCornerRadius="@dimen/_6sdp"
                app:cardElevation="@dimen/_6ssp"
                app:cardUseCompatPadding="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/occHd"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/montserrat_medium"
                        android:padding="2dp"
                        android:text="@string/occupation1"
                        android:textSize="@dimen/_10ssp" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etChildOccuCdial"
                        style="@style/CustomEditTextPadding5dp"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_22ssp"
                        android:background="@drawable/rectangular_curved_box"
                        android:fontFamily="@font/montserrat_regular"
                        android:inputType="text"
                        android:paddingStart="@dimen/_6ssp"
                        android:tag="@string/MANDATORY_TAG"
                        android:textColor="@color/enabled_color"
                        android:textCursorDrawable="@null"
                        android:textSize="@dimen/_12ssp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_8sdp"
                android:padding="3dp"
                app:cardCornerRadius="@dimen/_6sdp"
                app:cardElevation="@dimen/_6ssp"
                app:cardUseCompatPadding="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/ageHd"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/montserrat_medium"
                        android:padding="2dp"
                        android:text="@string/age"
                        android:textSize="@dimen/_10ssp" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etChildAgeCdial"
                        style="@style/CustomEditTextPadding5dp"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_22ssp"
                        android:background="@drawable/rectangular_curved_box"
                        android:fontFamily="@font/montserrat_regular"
                        android:inputType="number"
                        android:paddingStart="@dimen/_6ssp"
                        android:tag="@string/MANDATORY_TAG"
                        android:textColor="@color/enabled_color"
                        android:textCursorDrawable="@null"
                        android:textSize="@dimen/_12ssp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_8sdp"
                android:padding="3dp"
                app:cardCornerRadius="@dimen/_6sdp"
                app:cardElevation="@dimen/_6ssp"
                app:cardUseCompatPadding="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/genderHd"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/montserrat_medium"
                        android:padding="2dp"
                        android:text="@string/gender"
                        android:textSize="@dimen/_10ssp" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_2sdp"
                        android:layout_marginStart="@dimen/_14sdp"
                        android:layout_weight="1"
                        app:cardCornerRadius="@dimen/_3sdp"
                        app:cardElevation="@dimen/_2sdp">

                        <androidx.appcompat.widget.AppCompatSpinner
                            android:id="@+id/spChildGenderCdial"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_22ssp"
                            android:fontFamily="montserrat_regular"
                            android:visibility="visible" />

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">


        <TextView
            android:id="@+id/txtBackCdial"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@drawable/btn_bg_corner_orange"
            android:fontFamily="@font/montserrat_medium"
            android:gravity="center"
            android:text="@string/m_back"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtSaveCdial"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="1dp"
            android:layout_weight="1"
            android:background="@drawable/btn_bg_corner_orange"
            android:fontFamily="@font/montserrat_medium"
            android:gravity="center"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>